--- a/HexColorGenerator/Views/SavedColorsPage.xaml
+++ b/HexColorGenerator/Views/SavedColorsPage.xaml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="HexColorGenerator.Views.SavedColorsxaml"
-             Title="SavedColorsxaml">
+             x:Class="HexColorGenerator.Views.SavedColorsPage"
+             NavigationPage.HasNavigationBar="True"
+             Title="SavedColorsPage">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <ListView ItemsSource="{Binding SavedColors}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <StackLayout>
+                            <BoxView WidthRequest="30" HeightRequest="30" BackgroundColor="{Binding HexCode}"/>
+                            <Label Text="{Binding HexCode}"/>
+                        </StackLayout>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </VerticalStackLayout>
 </ContentPage>
