Enhance layout and styling in SavedColorsPage.xaml
- Added `VerticalOptions` to center the `Label` vertically.
- Set `Spacing` to `5` in `HorizontalStackLayout` for better spacing.
- Updated `Border` to have `StrokeThickness` of `0` to remove the border stroke.
- Changed `Label` `TextColor` to `White` for improved visibility.

--- a/HexColorGenerator/Views/SavedColorsPage.xaml
+++ b/HexColorGenerator/Views/SavedColorsPage.xaml
@@ -48,10 +48,11 @@
                                         <Label Text="{x:Static model:Icons.copyIcon}"
                                                Style="{x:StaticResource MaterialIcon}"
                                                HorizontalOptions="End"
-                                               VerticalOptions="Center"/>
+                                               VerticalOptions="Center"
+                                               TextColor="#fff"/>
                                     </HorizontalStackLayout>
                                 </Border>
-                                <HorizontalStackLayout Grid.Row="2">
+                                <HorizontalStackLayout Grid.Row="2" Spacing="5">
                                     <Border 
                                             BackgroundColor="#000"
                                             HorizontalOptions="Start"
@@ -67,7 +68,8 @@
                                     </Border>
                                     <Border Background="#000"
                                             Padding="5"
-                                            StrokeShape="RoundRectangle 5">
+                                            StrokeShape="RoundRectangle 5"
+                                            StrokeThickness="0">
                                         <Label Text="{x:Static model:Icons.copyIcon}"
                                                Style="{x:StaticResource MaterialIcon}"
                                                HorizontalOptions="End"
