Enhance color management and UI interactions
- Added commands for copying color values and generating random colors in MainViewModel.
- Introduced DeleteCommand in SavedColorsViewModel for removing saved colors.
- Updated color addition method to be asynchronous with toast notifications.
- Implemented JSON serialization for saving and loading colors.
- Bound MainPage background color to CurrentColor for dynamic UI updates.
- Added tap gesture for deleting saved colors in SavedColorsPage.

--- a/HexColorGenerator/Views/MainPage.xaml
+++ b/HexColorGenerator/Views/MainPage.xaml
@@ -31,7 +31,7 @@
             </Label>
         </Frame>
         <Grid x:Name="Container"
-          BackgroundColor="#000">
+          BackgroundColor="{Binding CurrentColor}">
             <Frame Margin="10, 0"
                 VerticalOptions="Center">
                 <VerticalStackLayout Spacing="15"
@@ -132,13 +132,16 @@
                             </HorizontalStackLayout>
                         </VerticalStackLayout>
                     </Frame>
-
+                    
+                    <!--Generate Random Button-->
                     <HorizontalStackLayout HorizontalOptions="Center" Spacing="10">
                         <Button Command="{Binding GenerateRandomCommand}"
                                 Text="Generate Random"
-                                Background="{StaticResource Primary}"
+                                Background="{Binding CurrentColor}"
                                 FontAttributes="Bold"
                                 FontSize="20"/>
+                        
+                        <!--Add to favorite label-->
                         <Frame Padding="5,0">
                             <Label Text="{x:Static models:Icons.favoriteIcon}"
                                        FontFamily="MaterialIcon"
