--- a/HexColorGenerator/Views/SavedColorsPage.xaml
+++ b/HexColorGenerator/Views/SavedColorsPage.xaml
@@ -30,6 +30,10 @@
                                            FontFamily="MaterialIcon"
                                            FontSize="30"
                                            TextColor="Red">
+                                        <Label.GestureRecognizers>
+                                            <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewModel:SavedColorsViewModel}},Path=DeleteCommand}"
+                                                                  CommandParameter="{Binding .}"/>
+                                        </Label.GestureRecognizers>
 
                                     </Label>
                                 </Border>
